# smart-calculator

./: .build_wasm.sh.swp  .gitignore  Cargo.toml  LICENSE  README.md  manifest.json  organize_project.sh  run_app.sh  sw.js
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/workflows/: codeql.yml  datadog-synthetics.yml
HyperCalc_v5/HyperCalc_v5/HyperCalc_v5/public/: index.html
HyperCalc_v5/HyperCalc_v5/HyperCalc_v5/server/: local-server.js
HyperCalc_v5/HyperCalc_v5/public/css/: style.css
HyperCalc_v5/HyperCalc_v5/public/js/: app.js  modules-loader.js
HyperCalc_v5/HyperCalc_v5/server/: local-server.js
HyperCalc_v5/HyperCalc_v5/wasm-src/: Cargo.toml
HyperCalc_v5/public/: index.html
HyperCalc_v5/public/js/: app.js  modules-loader.js
HyperCalc_v5/server/: local-server.js
HyperCalc_v5/wasm-src/src/: lib.rs
HyperCalc_v7/public/: index.html
HyperCalc_v7/public/css/: style.css
HyperCalc_v7/public/js/: app.js
HyperCalc_v7/public/plugins/plugin_1/: plugin.js
HyperCalc_v7/public/plugins/plugin_10/: plugin.js
HyperCalc_v7/public/plugins/plugin_11/: plugin.js
HyperCalc_v7/public/plugins/plugin_12/: plugin.js
HyperCalc_v7/public/plugins/plugin_13/: plugin.js
HyperCalc_v7/public/plugins/plugin_14/: plugin.js
HyperCalc_v7/public/plugins/plugin_15/: plugin.js
HyperCalc_v7/public/plugins/plugin_16/: plugin.js
HyperCalc_v7/public/plugins/plugin_17/: plugin.js
HyperCalc_v7/public/plugins/plugin_18/: plugin.js
HyperCalc_v7/public/plugins/plugin_19/: plugin.js
HyperCalc_v7/public/plugins/plugin_2/: plugin.js
HyperCalc_v7/public/plugins/plugin_20/: plugin.js
HyperCalc_v7/public/plugins/plugin_21/: plugin.js
HyperCalc_v7/public/plugins/plugin_22/: plugin.js
HyperCalc_v7/public/plugins/plugin_23/: plugin.js
HyperCalc_v7/public/plugins/plugin_24/: plugin.js
HyperCalc_v7/public/plugins/plugin_25/: plugin.js
HyperCalc_v7/public/plugins/plugin_26/: plugin.js
HyperCalc_v7/public/plugins/plugin_27/: plugin.js
HyperCalc_v7/public/plugins/plugin_28/: plugin.js
HyperCalc_v7/public/plugins/plugin_29/: plugin.js
HyperCalc_v7/public/plugins/plugin_3/: plugin.js
HyperCalc_v7/public/plugins/plugin_30/: plugin.js
HyperCalc_v7/public/plugins/plugin_4/: plugin.js
HyperCalc_v7/public/plugins/plugin_5/: plugin.js
HyperCalc_v7/public/plugins/plugin_6/: plugin.js
HyperCalc_v7/public/plugins/plugin_7/: plugin.js
HyperCalc_v7/scripts/: build_wasm.sh  run_server.sh
HyperCalc_v7/wasm-src/: Cargo.toml
HyperCalc_v7/wasm-src/src/: lib.rs
public/: auto_trainer.js  build_app_package.sh  calculator.js  canvas-measure.js  engine.js  geometry.js  index.html  manifest.json  map-measure.js  photo-measure.js  reality-calc-ai.js  reality-calc.js  sw.js  ui.js  units.js  wasm  wasm-bridge.js
public/Rust/: Cargo.toml  WebAssembly  lib.rs
public/ai/: explain-engine.js  intent-engine.js  learning-engine.js  nlp-parser.js
public/core/: engine.v1.js  engine.v2  engine.v3.js
public/js/: app.js  calculator.js  geometry.js  history.js  physics.js  smart-engine.js  ui.js  units.js
public/js/reality/: ai-worker.js  canvas-analyzer.js  image-analyzer.js  map-analyzer.js  reality-engine.js
public/physics/: body.js  integrator.js  sandbox.js  world.js
public/ui/: sandbox-ui.js
public/📄 core/: engine.v1.js
scripts/: build_wasm.sh
wasm-src/src/: lib.rs
(+123 files in other folders)
